--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,25 @@
-﻿[data-theme="dark"] {
-    --body-color: hsl(0, 0%, 85%);
-    --body-bg: hsl(200, 3%, 12%);
-    --heading-color: hsl(0, 0%, 85%);
-    --link-color: rgba(255, 255, 255, 0.75);
-    --link-hover-color: #fff;
-    --border-color: rgba(255, 255, 255, 0.15);
-    --code-bg: #212529;;
+﻿body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 20px;
+    line-height: 1.5;
+    color: hsl(0, 0%, 85%);
+    background-color: hsl(200, 3%, 12%);
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
 }
 
 @font-face {
     font-family: 'Garamond Classico SC Regular';
     src: url('Garamond Classico SC Regular.ttf');
+}
+
+a:link {
+    color: rgba(255, 255, 255, 0.75);
+}
+a:hover {
+    color: #fff;
+}
+a:visited {
+    color: #fff;
 }
