--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     padding: 0.5rem 1rem;
+    font-family: 'Garamond Classico SC Regular';
 }
 
 @font-face {
